# Jira-Backlog-Sorter

./: .gitignore  .pre-commit-config.yaml  README.md  dependabot,yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build-docs.yml  sonar.yml
docs/: mkdocs.yml  requirements.txt
docs/src/: index.md
docs/src/appendix/: status.md
scripts/: pre-commit.py
