[tool.poetry]
name = "jira backlog sorter"
version = "0.0.1"
description = "Library to provide the utilities to sort Jira Stories and Tasks"
authors = ["Arvind Singh Rawat <39412688+ArvindSinghRawat@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
